crates/mlcg_builtin_macros/tests/ui/fail_missing_manifest.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/missing_manifest.toml");
}

fn main() {}
